--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -5,7 +5,9 @@ server {
        #index index.html index.htm;
 
        server_name localhost;
-       #access_log /var/log/nginx access.log main;
+
+       access_log /home/box/log/access.log;
+       error_log /home/box/log/error.log;
 
        location / {
                 root /home/box/web;
@@ -16,7 +18,7 @@ server {
       }
 
       location ~* ^.+\..+$ {
-               root home/box/web/public;
+               root /home/box/web/public;
       }
 
       location ~* ^[^\.]+$ {
